# ServiceBot

./: .gitignore  CMakeLists.txt  Dockerfile  build.sh  commands to create barbershop psql  docker-compose.yaml
configs/: configs.json
include/: Admin.hpp  Session.hpp  User.hpp
include/DBService/: DB.hpp  DBImpl.hpp
include/Scheduler/: Scheduler.hpp  SchedulerImpl.hpp
include/utils/: shit.hpp
src/: Admin.cpp  Session.cpp  User.cpp  main.cpp
src/DBService/: DBImpl.cpp
src/Scheduler/: SchedulerImpl.cpp
src/utils/: base64.cpp  shit.cpp
